--- a/testTwo/index.html
+++ b/testTwo/index.html
@@ -53,7 +53,7 @@
             jumpButton = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
             w = game.input.keyboard.addKey(Phaser.Keyboard.W);
             a = game.input.keyboard.addKey(Phaser.Keyboard.A);
-            s = game.input.keyboard.addKey(Phaser.Keyboard.S);
+            //s = game.input.keyboard.addKey(Phaser.Keyboard.S);
             d = game.input.keyboard.addKey(Phaser.Keyboard.D);
         }
     
@@ -62,12 +62,12 @@
     
             player.body.velocity.x = 0;
 
-            if (cursors.left.isDown){
+            if (cursors.left.isDown || a.isDown){
                 player.body.velocity.x = -150;
 
                 player.animations.play('left');
             }
-            else if (cursors.right.isDown)
+            else if (cursors.right.isDown || d.isDown)
             {
                 player.body.velocity.x = 150;
 
@@ -79,9 +79,8 @@
 
                 player.frame = 4;
             }
-            if (jumpButton.isDown)
+            if (jumpButton.isDown || w.isDown || cursors.up.isDown)
             {
-                console.log("Up pressed")
                 if (player.body.onFloor())
                     player.body.velocity.y = -170;
             }
