On branch james_dev Your branch is up-to-date with 'origin/james_dev'.
Changes to be committed:
	new file:   p2example/assets/banana.png
	new file:   p2example/assets/betty.png
	new file:   p2example/assets/cherries.png
	new file:   p2example/assets/pineapple.png
	new file:   p2example/assets/sprite_physics.json
	new file:   p2example/index.html
	new file:   p2example/js/boot.js
	new file:   p2example/js/gameover.js
	new file:   p2example/js/gametitle.js
	new file:   p2example/js/main.js
	new file:   p2example/js/phaser.min.js
	new file:   p2example/js/preload.js
	new file:   testFour/assets/Background.png
	new file:   testFour/assets/Spikes.pes
	new file:   testFour/assets/Spikes.png
	new file:   testFour/assets/playerSpriteTwo.png
	new file:   testFour/assets/spikes.json
	new file:   testFour/assets/testMapTwo.json
	new file:   testFour/assets/tilesetMkI.png
	new file:   testFour/index.html
	new file:   testFour/js/boot.js
	new file:   testFour/js/gameover.js
	new file:   testFour/js/gametitle.js
	new file:   testFour/js/main.js
	new file:   testFour/js/phaser.min.js
	new file:   testFour/js/preload.js
	modified:   testThree/index.html
	modified:   testTwo/index.html

--- a/testTwo/index.html
+++ b/testTwo/index.html
@@ -15,10 +15,10 @@
         var game = new Phaser.Game(960, 640, Phaser.AUTO, '', { preload: preload, create: create, update: update });
         
         function preload() {
-            game.load.tilemap('tilemap', 'assets/testMapTwo.json', null, Phaser.Tilemap.TILED_JSON)
+            game.load.tilemap('tilemap', 'assets/testMapTwo.json', null, Phaser.Tilemap.TILED_JSON);
             game.load.image('tileset', 'assets/tilesetMkI.png');
             game.load.spritesheet('player', 'assets/playerSpriteTwo.png', 32, 64);
-        }
+        };
         
         var map;
         var layer;
